--- a/resetpasswords/utils/emails/template/welcome.hbs
+++ b/resetpasswords/utils/emails/template/welcome.hbs
@@ -5,7 +5,6 @@
     </head>
     <body>
         <p>Hi {{name}},</p>
-        <p>Your password has been changed successfully</p>
+        <p>Welcome to your new account</p>
     </body>
 </html>
-Footer
